kubernetes/monitoring/victoria-logs/templates/victoria-logs-external.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: victoria-logs
  namespace: victoria-logs
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9428
      targetPort: 9428
---
apiVersion: v1
kind: Endpoints
metadata:
  name: victoria-logs
  namespace: victoria-logs
subsets:
  - addresses:
      - ip: 10.0.10.86
    ports:
      - name: http
        port: 9428
